footer highlight and animation

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link rel="stylesheet" href="./css/animate.css">
     <link rel="shortcut icon" type="image/png" href="./assets/favicon.png"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
 </head>
 
@@ -38,7 +39,7 @@
     </section>
 
 </div>
-<footer class="animated bounceInUp">
+<footer class="animated fadeInUp" style="background-color: white;">
     <p>Made for <img src="https://cuhacking.com/img/logo.png" height="15" width="15"> cuHacking by <a href="https://www.github.com/davidhzhu">David Zhu</a>, <a href="https://github.com/devonpmack">Devon
         Mack</a>, <a href="https://github.com/billzzhang">Bill Zhang</a>, <a href="https://github.com/ethanzohar">Ethan Zohar</a>, and <a
                 href="https://github.com/nicholaspaquin">Nicholas Paquin</a></p>
