--- a/tone_analyzer/public/index.html
+++ b/tone_analyzer/public/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-
+<button onclick="location.href='/reddit'" class="ui button topleft">Reddit Version</button>
 <div class="ui raised very padded text container segment form animated zoomIn">
 
     <h1 class="ui centered header">
