--- a/tone_analyzer/public/reddit.html
+++ b/tone_analyzer/public/reddit.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-
+<button onclick="location.href='/'" class="ui button topleft">Twitter Version</button>
 <div class="ui raised very padded text container segment form animated zoomIn">
 
     <h1 class="ui centered header">
